<resources>
    <string name="app_name">Quick notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_widget_edit_note">WidgetEditNoteActivity</string>
    <string name="title_activity_export">Export to txt file</string>
    <string name="title_activity_widget_config">Choose note</string>
    <string name="saving">Saving</string>
    <string name="moving_to_trash">Moving to trash</string>
    <string name="closed_without_saving">Closed without saving</string>
    <string name="multilevel_note_manual_text">You can use \"-\", \"+\" and \"*\" at beginning of line to
        create multilevel notes.\nCheck the below example: \n\u0009- first level of note\n\u0009
        \u0009+ second level of note\n\u0009\u0009\u0009* third level of note\nNote that you can
        disable tabs in home widgets in Settings"</string>
    <string name="press_back_button_again_to_exit">Press back button again to exit</string>
    <string name="set_file_name">Set file name</string>
    <string name="confirm">Confirm</string>
    <string name="untitled">Untitled</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="you_are_not_allowed_to_write_in_this_folder">You are not allowed to write in this folder</string>
    <string name="do_you_want_to_override_this_file">Do you want to override this file?</string>
    <string name="failed">Failed</string>
    <string name="do_you_want_to_delete_all_notes">Do you want to delete all notes?</string>
    <string name="do_you_want_to_restore_all_notes">Do you want to restore all notes?</string>
    <string name="do_you_want_to_delete_this_folder_and_all_associated_notes">Do you want to delete this folder and all associated notes?</string>
    <string name="set_note_title">Set note title</string>
    <string name="set_folder_name">Set folder name</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="move_to_other_folder">Move to other folder</string>
    <string name="move_to_trash">Move to trash</string>
    <string name="new_folder">New folder</string>
    <string name="add_folder">Add folder</string>
    <string name="do_you_want_to_delete_this_note_from_trash">Do you want to delete this note from trash?</string>
    <string name="choose_new_folder">Choose new folder</string>
    <string name="do_you_want_to_restore_this_note_from_trash">Do you want to restore this note from trash?</string>
    <string name="search">Search</string>
    <string name="all_notes_were_removed">All notes were removed</string>
    <string name="all_notes_were_restored">All notes were restored</string>
    <string name="folder_and_all_associated_notes_were_removed">Folder and all associated notes were removed</string>
    <string name="note_is_empty_or_was_not_loaded_yet">Note is empty or was not loaded yet</string>
    <string name="help">Help</string>
    <string name="backups_have_to_be_placed_in_below_folder_in_internal_memory">Backups have to be placed in below folder in internal memory\n</string>
    <string name="i_have_got_it">I\'ve got it!</string>
    <string name="set_note_text_size">Set note text size</string>
    <string name="text_size_changed">Text size changed</string>
    <string name="backup">Backup</string>
    <string name="data">Data</string>
    <string name="settings">Settings</string>
    <string name="data_and_settings">Data and settings</string>
    <string name="choose_starting_folder">Choose starting folder</string>
    <string name="starting_folder_was_set">Starting folder was set</string>
    <string name="warning_this_action_will_replace_your_current_database_and_all_current_notes_and_folders_will_be_lost">Warning! This action will replace your current database and all notes and folders will be lost.\n</string>
    <string name="warning_this_action_will_replace_your_current_settings_and_all_current_configuration_will_be_lost">Warning! This action will replace your current settings and all current configuration will be lost.\n</string>
    <string name="do_you_want_to_continue">Do you want to continue?</string>
    <string name="backup_saved_to">Backup saved to:\n</string>
    <string name="notes_restored">Notes restored</string>
    <string name="settings_restored">Settings restored</string>
    <string name="restore_data">Restore data</string>
    <string name="restore_settings">Restore settings</string>
    <string name="backup_folder_is_empty_please_push_question_mark_to_check_where_backup_should_be_placed">Backup folder is empty. Please push question mark to check where backup should be placed</string>
    <string name="widget_configuration">Widget configuration</string>
    <string name="database_unavailable">Database unavailable</string>
    <string name="tip">Tip</string>
    <string name="you_have_only_one_folder">You have only one folder</string>
    <string name="note_was_removed">Note was removed</string>
    <string name="notes_was_restored">Notes was restored</string>
    <string name="note_has_been_moved">Note has been moved</string>
    <string name="note_is_empty_click_here_to_edit">Note is empty, click here to edit</string>
    <string name="text_size">"Text size: "</string>
    <string name="text_size_cannot_be_lower_than_1">Text size cannot be lower than 1</string>
    <string name="note_was_deleted_click_here_to_pick_new_one">Note was deleted, click here to pick new one</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="delete_folder">Delete folder</string>
    <string name="discard_changes">Discard changes</string>
    <string name="save">Save</string>
    <string name="restore_all">Restore all</string>
    <string name="delete_all">Delete all</string>
    <string name="ignore_tabs_in_widgets">Ignore tabs in widgets</string>
    <string name="widget_theme">WIDGET THEME</string>
    <string name="about">About</string>
    <string name="do_not_show_again">Don\'t show again</string>
    <string name="example">Example</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="my_notes">My Notes</string>
    <string name="trash">Trash</string>
    <string name="unable_to_load_folders_list_try_again_later">Unable to load folders list. Try again later</string>
    <string name="example_note_title">Example note title</string>
    <string name="change_widget_mode">Change widget mode</string>
    <string name="edit_note">Edit note</string>
    <string name="increase_text_size">Increase text size</string>
    <string name="decrease_text_size">Decrease text size</string>
    <string name="light_dark_theme">Light/dark theme</string>
    <string name="share_via">Share via</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="database_unavailable_or_you_do_not_have_notes">Database unavailable or you do not have notes</string>
    <string name="creating_widget">Creating widget</string>
    <string name="example_note_text">\n\n\nExample note text</string>
    <string name="created_by">Created by: Kamil Kaszubski</string>
    <string name="saving_to_txt_file">Saving to txt file</string>
    <string name="edge_list_name">Edge List</string>
    <string name="description_edge_list">Sample description</string>

    <string-array name="settings_items">
        <item>Widget configuration</item>
        <item>List configuration</item>
        <item>Note text size</item>
        <item>Starting folder</item>
        <item>Backup and restore</item>
    </string-array>
    <string name="title_activity_edge_config">Edge list configuration</string>
    <string name="tile_size">TILE SIZE</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="big">big</string>
    <string name="very_big">very big</string>
    <string name="text_size_cap">TEXT SIZE</string>
    <string name="bought_item_style">BOUGHT ITEM STYLE</string>
    <string name="color">color</string>
    <string name="strikethrough">strikethrough</string>
    <string name="ignore_tabs_in_edge_panel">Ignore tabs in edge panel</string>
    <string name="hide_content_when_device_is_locked">Hide content when device is locked</string>
    <string name="you_do_not_have_any_notes">You do not have any notes</string>
    <string name="content_hidden_nunlock_to_view_your_notes">Content hidden.\nUnlock to view your notes</string>
    <string name="new_item">Item name</string>
    <string name="remove_bought_items">Remove bought items</string>
    <string name="items_to_buy">Items to buy</string>
    <string name="items_bought">Items bought</string>
    <string name="add_from_clipboard">Add from clipboard</string>
    <string name="clipboard_does_not_contain_proper_data">Clipboard does not contain proper data</string>
    <string name="file_name">File name</string>
    <string name="folder_name">Folder name</string>
    <string name="note_name">Note name</string>
    <string name="edit_item">Edit item</string>
    <string name="item_name_cannot_be_empty">Item name cannot be empty</string>
    <string name="open_menu">Open menu</string>
    <string name="item_removed">Item removed</string>
    <string name="restored_from_bought_items">Restored from bought items</string>
    <string name="added_new_item">New item added</string>
    <string name="item_is_already_on_list">Item is already on list</string>
    <string name="item_size_is_limited_to_s_chars">Item length is limited to %d chars</string>
    <string name="newly_bought_item_behavior">NEWLY BOUGHT ITEM BEHAVIOR</string>
    <string name="move_to_top_of_bought_list">move to top of bought list</string>
    <string name="move_to_bottom_of_bought_list">move to bottom of bought list</string>
    <string name="list_configuration">List configuration</string>
    <string name="item_length">ITEM LENGTH</string>
    <string name="item_length_hint">Item length</string>

    <string-array name="note_types">
        <item>Note</item>
        <item>List</item>
    </string-array>
    <string-array name="widget_actions">
        <item>Open application</item>
        <item>Change displayed note</item>
    </string-array>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
