<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_by_date"
        android:orderInCategory="100"
        android:title="@string/sort_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_title"
        android:orderInCategory="200"
        android:title="@string/sort_by_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_nav_folder"
        android:orderInCategory="300"
        android:title="@string/add_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="400"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:showAsAction="always" />
</menu>
