<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_discard_changes"
        android:orderInCategory="300"
        android:title="@string/discard_changes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_disabled_items"
        android:orderInCategory="350"
        android:title="@string/remove_bought_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="400"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="500"
        android:icon="@drawable/ic_save_white"
        android:title="@string/save"
        app:showAsAction="always" />
</menu>
