<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/note_text_padding">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/divider" />
        <include
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            layout="@layout/single_line_with_handle_recycle_view_item"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/tileSizeHeader"
                android:textColor="@color/colorPrimary"
                android:text="@string/tile_size"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layout_gravity="center_horizontal|top"
                android:layout_below="@+id/tileSizeHeader">

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton"
                    android:checked="false"
                    android:layout_gravity="center_vertical"
                    android:text="@string/small" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2"
                    android:checked="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/medium" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3"
                    android:checked="false"
                    android:layout_gravity="center_vertical"
                    android:text="@string/big" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton4"
                    android:checked="false"
                    android:layout_gravity="center_vertical"
                    android:text="@string/very_big" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSizeHeader"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/text_size_cap"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textSizeHeader"
                android:layout_alignLeft="@+id/textSizeHeader"
                android:layout_alignRight="@+id/textSizeHeader">
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberPicker2"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal" />
            </FrameLayout>


        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/bought_item_style"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup2">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:id="@+id/radioButton5"
                android:checked="true" />

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strikethrough"
                android:id="@+id/radioButton6"
                android:checked="false" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/newly_bought_item_behavior"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroup3">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_to_top_of_bought_list"
                android:id="@+id/radioButton7"
                android:checked="true" />

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_to_bottom_of_bought_list"
                android:id="@+id/radioButton8"
                android:checked="false" />
        </RadioGroup>


    </LinearLayout>
</ScrollView>